# lingraph

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: ci.yaml
lingraph/: app.py  linear_api.py
lingraph/templates/: head.html  login.html  project.html  root.html
tests/: test_linear_api.py
